Bug 1511290 - Reset the GIF frame delay time between frames. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D56360