image/decoders/nsGIFDecoder2.cpp
@@ -232,6 +232,10 @@ void nsGIFDecoder2::EndImageFrame() {
   // even if some of them weren't decoded properly and thus are blank.
   mGIFStruct.images_decoded++;
 
+  // Reset graphic control extension parameters that we shouldn't reuse
+  // between frames.
+  mGIFStruct.delay_time = 0;
+
   // Tell the superclass we finished a frame
   PostFrameStop(opacity);
 
@@ -649,7 +653,7 @@ nsGIFDecoder2::ReadGraphicControlExtension(const char* aData) {
   }
 
   mGIFStruct.delay_time = LittleEndian::readUint16(aData + 1) * 10;
-  if (mGIFStruct.delay_time > 0) {
+  if (!HasAnimation() && mGIFStruct.delay_time > 0) {
     PostIsAnimated(FrameTimeout::FromRawMilliseconds(mGIFStruct.delay_time));
   }
 
